# LightWeightD3D12

./: .gitignore  CMakeLists.txt  Directory.Build.props  LightD3D12.Assimp.props  LightD3D12.FSR.props  LightD3D12.PIX.props  LightD3D12.sln  README.md
D3D12/: d3d12_CommandBuffer.cpp
Data/volumetric_clouds/: README.md
LightD3D12/: LightD3D12.vcxproj  LightD3D12.vcxproj.filters  README.md
LightD3D12/include/LightD3D12/: HandleSlotMap.hpp  LightAssimpImporter.hpp  LightD3D12.hpp  LightD3D12Imgui.hpp  LightHLSLLoader.hpp
LightD3D12/src/: LightAssimpImporter.cpp  LightD3D12BaseMips.cpp  LightD3D12BaseMips.hpp  LightD3D12CommandBuffer.cpp  LightD3D12CommandBuffer.hpp  LightD3D12DeviceManager.cpp  LightD3D12Imgui.cpp  LightD3D12ImmediateCommands.cpp  LightD3D12ImmediateCommands.hpp  LightD3D12Internal.hpp  LightD3D12ManagerImpl.hpp  LightD3D12RenderDevice.cpp  LightD3D12Resources.cpp  LightD3D12Resources.hpp  LightD3D12ShaderCompiler.cpp  LightD3D12ShaderCompiler.hpp  LightD3D12StagingDevice.cpp  LightD3D12StagingDevice.hpp  LightD3D12Swapchain.cpp  LightD3D12Swapchain.hpp  LightHLSLLoader.cpp
LightD3D12/src/shaders/: LightD3D12BaseMipsCS.hlsl
bindings/LightD3D12WpfNative/: LightD3D12WpfNative.cpp  LightD3D12WpfNative.vcxproj
samples/AssimpDuck/: AssimpDuck.vcxproj  main.cpp
samples/AssimpDuck/shaders/: AssimpDuckWireframePS.hlsl
samples/Compute/: Compute.vcxproj  Compute.vcxproj.filters  main.cpp
samples/Cube/: Cube.vcxproj  main.cpp
samples/Deferred/: Deferred.vcxproj  Deferred.vcxproj.filters  main.cpp
samples/DemoDepthStencl/: DemoDepthStencl.vcxproj  DemoDepthStencl.vcxproj.filters  main.cpp
samples/EnvironmentImgui/: EnvironmentImgui.vcxproj  EnvironmentImgui.vcxproj.filters  main.cpp
samples/GlobeMap/: GlobeMap.vcxproj  GlobeMap.vcxproj.filters  main.cpp
samples/GlobeMap/shaders/: GlobeMapGeoVS.hlsl  GlobeMapMarkerPS.hlsl  GlobeMapMarkerVS.hlsl  GlobeMapSurfacePS.hlsl  GlobeMapTilePS.hlsl
samples/HelloAssimpDuck/: HelloAssimpDuck.vcxproj  main.cpp
samples/HelloAssimpDuck/shaders/: HelloAssimpDuckSolidPS.hlsl  HelloAssimpDuckVS.hlsl
samples/HelloCompute/: HelloCompute.vcxproj  main.cpp
samples/HelloCube/: HelloCube.vcxproj  main.cpp
samples/HelloDeferred/: HelloDeferred.vcxproj  main.cpp
samples/HelloInstancing/: HelloInstancing.vcxproj  main.cpp
samples/HelloLoadOps/: HelloLoadOps.vcxproj  main.cpp
samples/HelloMeshDeformation/: HelloMeshDeformation.vcxproj  SPECIFICATION.md  main.cpp
samples/HelloNightVision/: HelloNightVision.vcxproj  main.cpp
samples/HelloPostProcess/: HelloPostProcess.vcxproj  HelloPostProcess.vcxproj.filters  main.cpp
samples/HelloRenderToTexture/: HelloRenderToTexture.vcxproj  HelloRenderToTexture.vcxproj.filters  main.cpp
samples/HelloShadowMapping/: HelloShadowMapping.vcxproj  main.cpp
samples/HelloSprites/: HelloSprites.vcxproj  main.cpp
samples/HelloTriangle/: HelloTriangle.vcxproj  main.cpp
samples/HelloUpscaler/: HelloUpscaler.vcxproj  HelloUpscalerArchitecture.md  HelloUpscalerArchitecture.uml  HelloUpscalerIntegrationGuide.uml  main.cpp
samples/HelloVolumetricClouds/: HelloVolumetricClouds.vcxproj  README.md  main.cpp
samples/HelloVolumetricClouds/shaders/: HelloVolumetricCloudsShapeNoiseCS.hlsl
samples/HelloWpfTriangle/: App.xaml  App.xaml.cs  HelloWpfTriangle.csproj  LightD3D12Host.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  README.md
samples/Instancing/: Instancing.vcxproj  Instancing.vcxproj.filters  main.cpp
samples/LightmapBakedCube/: LightmapBakedCube.vcxproj  LightmapBakedCube.vcxproj.filters  main.cpp
samples/LightmapBakedCube/shaders/: BakeLightPS.hlsl  BakeLightVS.hlsl  BakedCubePS.hlsl  BakedCubeVS.hlsl
samples/LoadOps/: LoadOps.vcxproj  LoadOps.vcxproj.filters  main.cpp
samples/MeshDeformation/: MeshDeformation.vcxproj  SPECIFICATION.md  main.cpp
samples/MeshDeformation/shaders/: MeshDeformationSolidPS.hlsl  MeshDeformationVS.hlsl  MeshDeformationWireframePS.hlsl
samples/MiniEngine2D/: Actor.cpp  Actor.hpp  Actors.cpp  Actors.hpp  DesignGameEngine_Frame.md  EngineTypes.hpp  GameCommand.hpp  GameEngine.cpp  GameEngine.hpp  MiniEngine2D.vcxproj  MiniEngine2D.vcxproj.filters  Profiler.hpp  README.md  RenderQueue.hpp  RenderThread.cpp  RenderThread.hpp  RenderTypes.hpp  SpriteRenderer2D.cpp  SpriteRenderer2D.hpp  TaskScheduler.cpp  TaskScheduler.hpp  TickFunction.hpp  TickScheduler.cpp  TickScheduler.hpp  World.cpp  World.hpp  WorldSnapshot.cpp  WorldSnapshot.hpp  diagram_engine.md  main.cpp  uml_class.md
samples/NightVision/: NightVision.vcxproj  main.cpp
samples/NightVision/shaders/: NightVisionPresentPS.hlsl  NightVisionPresentVS.hlsl  NightVisionScenePS.hlsl  NightVisionSceneVS.hlsl  NightVisionSensorCS.hlsl
samples/PostProcess/: PostProcess.vcxproj  main.cpp
samples/RayMarchingGuide/: README.md  RayMarchingGuide.vcxproj  RayMarchingGuide.vcxproj.filters  main.cpp
samples/RayMarchingGuide/shaders/: RayMarchingGuidePS.hlsl
samples/RenderToTexture/: RenderToTexture.vcxproj  main.cpp
samples/ShadowMapping/: ShadowMapping.vcxproj  ShadowMapping.vcxproj.filters  main.cpp
samples/Sprites/: Sprites.vcxproj  Sprites.vcxproj.filters  main.cpp
samples/TexturePlane/: TexturePlane.vcxproj  TexturePlane.vcxproj.filters  main.cpp  texture_source.avif
samples/TexturePlane/shaders/: TexturePlanePS.hlsl  TexturePlaneVS.hlsl
samples/Triangle/: Triangle.vcxproj  Triangle.vcxproj.filters  main.cpp
samples/Upscaler/: Upscaler.vcxproj  UpscalerArchitecture.md  UpscalerArchitecture.uml  UpscalerIntegrationGuide.uml  main.cpp
samples/UsdStaticScene/: UsdStaticScene.vcxproj  UsdStaticScene.vcxproj.filters  main.cpp  scene.usd
samples/VolumetricClouds/: README.md  VolumetricClouds.vcxproj  main.cpp
samples/VolumetricClouds/shaders/: VolumetricCloudsDetailNoiseCS.hlsl  VolumetricCloudsGroundPS.hlsl  VolumetricCloudsGroundVS.hlsl  VolumetricCloudsPS.hlsl
samples/WpfTriangle/: App.xaml  App.xaml.cs  LightD3D12Host.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  README.md
